test/parser/leading-decimal-mark.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:12: error: unexpected '.'
var half = .5;
